src/parser/sqlParser.java
// $ANTLR 3.4 sqlParser.g 2013-06-06 10:15:44

    package parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class sqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALL", "AND", "AS", "ASC", "AVG", "BY", "CHAR", "COMMA", "COMMENT", "CONCA", "COUNT", "CROSS", "DESC", "DISTINCT", "DIVIDE", "DOT", "EQ", "ESC_SEQ", "EXCEPT", "EXPONENT", "FLOAT", "FOR", "FROM", "FULL", "FUNCTION", "GEQ", "GROUP", "GT", "HAVING", "HEX_DIGIT", "ID", "INNER", "INT", "INTERSECT", "JOIN", "LBRAC", "LEFT", "LEQ", "LIKE", "LIMIT", "LT", "MAX", "MIN", "MINUS", "MULTIPLY", "NATURAL", "NEQ", "NOWAIT", "OCTAL_ESC", "OF", "OFFSET", "ON", "ONLY", "OR", "ORDER", "OUTER", "PLUS", "QUAL_ID", "RBRAC", "RIGHT", "SELECT", "SHARE", "STRING", "SUM", "UNICODE_ESC", "UNION", "UNKNOWN", "UPDATE", "USING", "VARCHAR", "WHERE", "WS"
    };

    public static final int EOF=-1;
    public static final int ALL=4;
    public static final int AND=5;
    public static final int AS=6;
    public static final int ASC=7;
    public static final int AVG=8;
    public static final int BY=9;
    public static final int CHAR=10;
    public static final int COMMA=11;
    public static final int COMMENT=12;
    public static final int CONCA=13;
    public static final int COUNT=14;
    public static final int CROSS=15;
    public static final int DESC=16;
    public static final int DISTINCT=17;
    public static final int DIVIDE=18;
    public static final int DOT=19;
    public static final int EQ=20;
    public static final int ESC_SEQ=21;
    public static final int EXCEPT=22;
    public static final int EXPONENT=23;
    public static final int FLOAT=24;
    public static final int FOR=25;
    public static final int FROM=26;
    public static final int FULL=27;
    public static final int FUNCTION=28;
    public static final int GEQ=29;
    public static final int GROUP=30;
    public static final int GT=31;
    public static final int HAVING=32;
    public static final int HEX_DIGIT=33;
    public static final int ID=34;
    public static final int INNER=35;
    public static final int INT=36;
    public static final int INTERSECT=37;
    public static final int JOIN=38;
    public static final int LBRAC=39;
    public static final int LEFT=40;
    public static final int LEQ=41;
    public static final int LIKE=42;
    public static final int LIMIT=43;
    public static final int LT=44;
    public static final int MAX=45;
    public static final int MIN=46;
    public static final int MINUS=47;
    public static final int MULTIPLY=48;
    public static final int NATURAL=49;
    public static final int NEQ=50;
    public static final int NOWAIT=51;
    public static final int OCTAL_ESC=52;
    public static final int OF=53;
    public static final int OFFSET=54;
    public static final int ON=55;
    public static final int ONLY=56;
    public static final int OR=57;
    public static final int ORDER=58;
    public static final int OUTER=59;
    public static final int PLUS=60;
    public static final int QUAL_ID=61;
    public static final int RBRAC=62;
    public static final int RIGHT=63;
    public static final int SELECT=64;
    public static final int SHARE=65;
    public static final int STRING=66;
    public static final int SUM=67;
    public static final int UNICODE_ESC=68;
    public static final int UNION=69;
    public static final int UNKNOWN=70;
    public static final int UPDATE=71;
    public static final int USING=72;
    public static final int VARCHAR=73;
    public static final int WHERE=74;
    public static final int WS=75;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public sqlParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public sqlParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return sqlParser.tokenNames; }
    public String getGrammarFileName() { return "sqlParser.g"; }


    public static class aggregator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "aggregator"
    // sqlParser.g:15:1: aggregator : ( SUM | COUNT | MAX | MIN | AVG );
    public final sqlParser.aggregator_return aggregator() throws RecognitionException {
        sqlParser.aggregator_return retval = new sqlParser.aggregator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set1=null;

        Object set1_tree=null;

        try {
            // sqlParser.g:15:12: ( SUM | COUNT | MAX | MIN | AVG )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set1=(Token)input.LT(1);

            if ( input.LA(1)==AVG||input.LA(1)==COUNT||(input.LA(1) >= MAX && input.LA(1) <= MIN)||input.LA(1)==SUM ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set1)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "aggregator"


    public static class comparator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "comparator"
    // sqlParser.g:16:1: comparator : ( EQ | GT | LEQ | GEQ | LT | NEQ | LIKE );
    public final sqlParser.comparator_return comparator() throws RecognitionException {
        sqlParser.comparator_return retval = new sqlParser.comparator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set2=null;

        Object set2_tree=null;

        try {
            // sqlParser.g:16:12: ( EQ | GT | LEQ | GEQ | LT | NEQ | LIKE )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set2=(Token)input.LT(1);

            if ( input.LA(1)==EQ||input.LA(1)==GEQ||input.LA(1)==GT||(input.LA(1) >= LEQ && input.LA(1) <= LIKE)||input.LA(1)==LT||input.LA(1)==NEQ ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set2)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "comparator"


    public static class order_operator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "order_operator"
    // sqlParser.g:17:1: order_operator : ( GT | LT );
    public final sqlParser.order_operator_return order_operator() throws RecognitionException {
        sqlParser.order_operator_return retval = new sqlParser.order_operator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set3=null;

        Object set3_tree=null;

        try {
            // sqlParser.g:17:16: ( GT | LT )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set3=(Token)input.LT(1);

            if ( input.LA(1)==GT||input.LA(1)==LT ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set3)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "order_operator"


    public static class operator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "operator"
    // sqlParser.g:18:1: operator : ( PLUS | MINUS | MULTIPLY | DIVIDE | CONCA );
    public final sqlParser.operator_return operator() throws RecognitionException {
        sqlParser.operator_return retval = new sqlParser.operator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set4=null;

        Object set4_tree=null;

        try {
            // sqlParser.g:18:10: ( PLUS | MINUS | MULTIPLY | DIVIDE | CONCA )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set4=(Token)input.LT(1);

            if ( input.LA(1)==CONCA||input.LA(1)==DIVIDE||(input.LA(1) >= MINUS && input.LA(1) <= MULTIPLY)||input.LA(1)==PLUS ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set4)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "operator"


    public static class column_name_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "column_name"
    // sqlParser.g:20:1: column_name : ( ID | QUAL_ID );
    public final sqlParser.column_name_return column_name() throws RecognitionException {
        sqlParser.column_name_return retval = new sqlParser.column_name_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set5=null;

        Object set5_tree=null;

        try {
            // sqlParser.g:20:13: ( ID | QUAL_ID )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set5=(Token)input.LT(1);

            if ( input.LA(1)==ID||input.LA(1)==QUAL_ID ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set5)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "column_name"


    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "type"
    // sqlParser.g:21:1: type : UNKNOWN ;
    public final sqlParser.type_return type() throws RecognitionException {
        sqlParser.type_return retval = new sqlParser.type_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token UNKNOWN6=null;

        Object UNKNOWN6_tree=null;

        try {
            // sqlParser.g:21:7: ( UNKNOWN )
            // sqlParser.g:21:9: UNKNOWN
            {
            root_0 = (Object)adaptor.nil();


            UNKNOWN6=(Token)match(input,UNKNOWN,FOLLOW_UNKNOWN_in_type161); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            UNKNOWN6_tree = 
            (Object)adaptor.create(UNKNOWN6)
            ;
            adaptor.addChild(root_0, UNKNOWN6_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "type"


    public static class column_alias_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "column_alias"
    // sqlParser.g:22:1: column_alias : ID ;
    public final sqlParser.column_alias_return column_alias() throws RecognitionException {
        sqlParser.column_alias_return retval = new sqlParser.column_alias_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID7=null;

        Object ID7_tree=null;

        try {
            // sqlParser.g:22:14: ( ID )
            // sqlParser.g:22:16: ID
            {
            root_0 = (Object)adaptor.nil();


            ID7=(Token)match(input,ID,FOLLOW_ID_in_column_alias169); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID7_tree = 
            (Object)adaptor.create(ID7)
            ;
            adaptor.addChild(root_0, ID7_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "column_alias"


    public static class alias_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "alias"
    // sqlParser.g:23:1: alias : ID ;
    public final sqlParser.alias_return alias() throws RecognitionException {
        sqlParser.alias_return retval = new sqlParser.alias_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID8=null;

        Object ID8_tree=null;

        try {
            // sqlParser.g:23:8: ( ID )
            // sqlParser.g:23:10: ID
            {
            root_0 = (Object)adaptor.nil();


            ID8=(Token)match(input,ID,FOLLOW_ID_in_alias178); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID8_tree = 
            (Object)adaptor.create(ID8)
            ;
            adaptor.addChild(root_0, ID8_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "alias"


    public static class function_name_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function_name"
    // sqlParser.g:24:1: function_name : ID ;
    public final sqlParser.function_name_return function_name() throws RecognitionException {
        sqlParser.function_name_return retval = new sqlParser.function_name_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID9=null;

        Object ID9_tree=null;

        try {
            // sqlParser.g:24:15: ( ID )
            // sqlParser.g:24:17: ID
            {
            root_0 = (Object)adaptor.nil();


            ID9=(Token)match(input,ID,FOLLOW_ID_in_function_name186); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID9_tree = 
            (Object)adaptor.create(ID9)
            ;
            adaptor.addChild(root_0, ID9_tree);
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function_name"


    public static class argument_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "argument"
    // sqlParser.g:25:1: argument : ( INT | FLOAT | ID );
    public final sqlParser.argument_return argument() throws RecognitionException {
        sqlParser.argument_return retval = new sqlParser.argument_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set10=null;

        Object set10_tree=null;

        try {
            // sqlParser.g:25:10: ( INT | FLOAT | ID )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set10=(Token)input.LT(1);

            if ( input.LA(1)==FLOAT||input.LA(1)==ID||input.LA(1)==INT ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set10)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "argument"


    public static class table_name_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "table_name"
    // sqlParser.g:26:1: table_name : ( ID | QUAL_ID );
    public final sqlParser.table_name_return table_name() throws RecognitionException {
        sqlParser.table_name_return retval = new sqlParser.table_name_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set11=null;

        Object set11_tree=null;

        try {
            // sqlParser.g:26:12: ( ID | QUAL_ID )
            // sqlParser.g:
            {
            root_0 = (Object)adaptor.nil();


            set11=(Token)input.LT(1);

            if ( input.LA(1)==ID||input.LA(1)==QUAL_ID ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set11)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "table_name"


    public static class join_type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "join_type"
    // sqlParser.g:28:1: join_type : ( ( INNER )? JOIN -> ^( JOIN ) | LEFT ( OUTER )? JOIN -> ^( LEFT ) | RIGHT ( OUTER )? JOIN -> ^( RIGHT ) | FULL ( OUTER )? JOIN -> ^( FULL ) | CROSS JOIN !);
    public final sqlParser.join_type_return join_type() throws RecognitionException {
        sqlParser.join_type_return retval = new sqlParser.join_type_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token INNER12=null;
        Token JOIN13=null;
        Token LEFT14=null;
        Token OUTER15=null;
        Token JOIN16=null;
        Token RIGHT17=null;
        Token OUTER18=null;
        Token JOIN19=null;
        Token FULL20=null;
        Token OUTER21=null;
        Token JOIN22=null;
        Token CROSS23=null;
        Token JOIN24=null;

        Object INNER12_tree=null;
        Object JOIN13_tree=null;
        Object LEFT14_tree=null;
        Object OUTER15_tree=null;
        Object JOIN16_tree=null;
        Object RIGHT17_tree=null;
        Object OUTER18_tree=null;
        Object JOIN19_tree=null;
        Object FULL20_tree=null;
        Object OUTER21_tree=null;
        Object JOIN22_tree=null;
        Object CROSS23_tree=null;
        Object JOIN24_tree=null;
        RewriteRuleTokenStream stream_OUTER=new RewriteRuleTokenStream(adaptor,"token OUTER");
        RewriteRuleTokenStream stream_RIGHT=new RewriteRuleTokenStream(adaptor,"token RIGHT");
        RewriteRuleTokenStream stream_FULL=new RewriteRuleTokenStream(adaptor,"token FULL");
        RewriteRuleTokenStream stream_INNER=new RewriteRuleTokenStream(adaptor,"token INNER");
        RewriteRuleTokenStream stream_LEFT=new RewriteRuleTokenStream(adaptor,"token LEFT");
        RewriteRuleTokenStream stream_JOIN=new RewriteRuleTokenStream(adaptor,"token JOIN");

        try {
            // sqlParser.g:28:13: ( ( INNER )? JOIN -> ^( JOIN ) | LEFT ( OUTER )? JOIN -> ^( LEFT ) | RIGHT ( OUTER )? JOIN -> ^( RIGHT ) | FULL ( OUTER )? JOIN -> ^( FULL ) | CROSS JOIN !)
            int alt5=5;
            switch ( input.LA(1) ) {
            case INNER:
            case JOIN:
                {
                alt5=1;
                }
                break;
            case LEFT:
                {
                alt5=2;
                }
                break;
            case RIGHT:
                {
                alt5=3;
                }
                break;
            case FULL:
                {
                alt5=4;
                }
                break;
            case CROSS:
                {
                alt5=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // sqlParser.g:28:15: ( INNER )? JOIN
                    {
                    // sqlParser.g:28:15: ( INNER )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==INNER) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // sqlParser.g:28:15: INNER
                            {
                            INNER12=(Token)match(input,INNER,FOLLOW_INNER_in_join_type225); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_INNER.add(INNER12);


                            }
                            break;

                    }


                    JOIN13=(Token)match(input,JOIN,FOLLOW_JOIN_in_join_type228); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_JOIN.add(JOIN13);


                    // AST REWRITE
                    // elements: JOIN
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 28:27: -> ^( JOIN )
                    {
                        // sqlParser.g:28:30: ^( JOIN )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_JOIN.nextNode()
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // sqlParser.g:29:8: LEFT ( OUTER )? JOIN
                    {
                    LEFT14=(Token)match(input,LEFT,FOLLOW_LEFT_in_join_type243); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_LEFT.add(LEFT14);


                    // sqlParser.g:29:13: ( OUTER )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==OUTER) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // sqlParser.g:29:13: OUTER
                            {
                            OUTER15=(Token)match(input,OUTER,FOLLOW_OUTER_in_join_type245); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_OUTER.add(OUTER15);


                            }
                            break;

                    }


                    JOIN16=(Token)match(input,JOIN,FOLLOW_JOIN_in_join_type248); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_JOIN.add(JOIN16);


                    // AST REWRITE
                    // elements: LEFT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 29:25: -> ^( LEFT )
                    {
                        // sqlParser.g:29:28: ^( LEFT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_LEFT.nextNode()
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 3 :
                    // sqlParser.g:30:8: RIGHT ( OUTER )? JOIN
                    {
                    RIGHT17=(Token)match(input,RIGHT,FOLLOW_RIGHT_in_join_type263); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_RIGHT.add(RIGHT17);


                    // sqlParser.g:30:14: ( OUTER )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==OUTER) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // sqlParser.g:30:14: OUTER
                            {
                            OUTER18=(Token)match(input,OUTER,FOLLOW_OUTER_in_join_type265); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_OUTER.add(OUTER18);


                            }
                            break;

                    }


                    JOIN19=(Token)match(input,JOIN,FOLLOW_JOIN_in_join_type268); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_JOIN.add(JOIN19);


                    // AST REWRITE
                    // elements: RIGHT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 30:26: -> ^( RIGHT )
                    {
                        // sqlParser.g:30:29: ^( RIGHT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_RIGHT.nextNode()
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
                    }
